fix dark mode links

--- a/test/dummy/app/assets/stylesheets/modules/mailer/_dark_mode.sass
+++ b/test/dummy/app/assets/stylesheets/modules/mailer/_dark_mode.sass
@@ -81,8 +81,11 @@ $dummy-mailer-styles: false !default
       background-color: $cloud-800 !important
       text-underline-color: $cloud-800 !important
 
-    .d-mailer-order-summary__divider
+    .d-mailer-order-summary__divider,
+    .d-mailer-cards-lot__divider
       background: $cloud-700 !important
 
-    .d-mailer-cards-lot__hr
-      background-color: $cloud-700 !important
+    .d-mailer-footer__contact-detail,
+    .d-mailer-cards-medium__link,
+    .d-mailer-cards-extra-small__link
+      color: $primary-white !important
