--- a/test/dummy/app/assets/stylesheets/modules/mailer/_dark_mode_mso.sass
+++ b/test/dummy/app/assets/stylesheets/modules/mailer/_dark_mode_mso.sass
@@ -86,7 +86,10 @@ $dummy-mailer-styles: false !default
     text-underline-color: $cloud-800 !important
 
   [data-ogsc] .d-mailer-order-summary__divider
+  [data-ogsc] .d-mailer-cards-lot__divider-wrapper
     background: $cloud-700 !important
 
-  [data-ogsc] .d-mailer-cards-lot__hr
-    background-color: $cloud-700 !important
+  [data-ogsc] .d-mailer-footer__contact-detail,
+  [data-ogsc] .d-mailer-cards-medium__link,
+  [data-ogsc] .d-mailer-cards-extra-small__link
+    color: $primary-white !important
